tests/snapshots/run_wpt_conformance__litert_gemm_two_float16_2D_tensors_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.alpha, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([100, 45, 210, 56, 237, 53, 151, 55, 115, 59, 215, 57, 37, 58, 20, 58, 100, 57, 175, 55, 216, 47, 175, 57, 61, 59, 192, 49, 109, 56, 247, 36, 167, 52, 8, 51, 120, 58, 148, 46]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=74.43204170482103, bTranspose=false, beta=1.0, c=null, label="");
  }

  outputs { gemmOutput; }
}
