tests/snapshots/run_wpt_conformance__litert_gemm_two_float16_2D_tensors_options_bTranspose_being_explicit_false.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.bTranspose being explicit false, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([127, 49, 40, 56, 126, 54, 223, 57, 213, 48, 148, 56, 32, 59, 153, 57, 177, 56, 40, 46, 254, 59, 66, 57, 131, 40, 7, 52, 101, 55, 170, 49, 42, 39, 159, 48, 43, 58, 55, 47]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=1.0, c=null, label="");
  }

  outputs { gemmOutput; }
}
