tests/snapshots/run_wpt_conformance__litert_gemm_two_float16_2D_tensors_options_bTranspose_being_true.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.bTranspose being true, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[5, 4] @bytes([133, 51, 94, 54, 51, 57, 5, 57, 196, 55, 91, 54, 110, 57, 57, 57, 229, 50, 190, 57, 157, 57, 219, 59, 94, 57, 54, 52, 98, 56, 151, 57, 23, 57, 131, 30, 89, 49, 221, 56]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=true, beta=1.0, c=null, label="");
  }

  outputs { gemmOutput; }
}
