tests/snapshots/run_wpt_conformance__litert_gemm_two_float16_2D_tensors_options_c_and_options_beta.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.c and options.beta, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([66, 55, 166, 57, 82, 55, 232, 52, 166, 54, 88, 52, 126, 52, 7, 54, 221, 51, 139, 52, 203, 57, 49, 56, 208, 57, 8, 56, 63, 45, 78, 53, 247, 50, 182, 47, 67, 49, 216, 50]);
    operand_2: f16[3, 5] @bytes([228, 57, 221, 58, 102, 59, 97, 59, 106, 59, 11, 54, 27, 53, 151, 51, 97, 58, 196, 44, 26, 57, 159, 54, 200, 57, 71, 59, 36, 58]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=62.01828598608989, c=2, label="");
  }

  outputs { gemmOutput; }
}
