tests/snapshots/run_wpt_conformance__litert_gemm_two_float32_2D_constant_tensors_options_c.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm two float32 2D constant tensors options.c",
    "litert",
    "PASS",
)
